--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -74,14 +74,14 @@
                   <!-- <button type="submit" class="search-submit btn btn-default">Search</button> -->
                 </form>
             </div>
-            <div class="nav-toggle">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              </div>
+            <div class="sidebar-toggle">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
             <div id="tabs">
                 <!-- <ul class="tabs nav navbar-nav navbar-collapse collapse navbar-left"> -->
                 <ul class="tabs nav navbar-nav navbar-collapse navbar-left">
