Share images, JS fixes, Marketo removal

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
-  <!-- newsletter -->
+
   <div class="newsletter_section">
       <div class="container">
+        <!-- newsletter
           <div class="col-md-8">
               <form class="form-inline">
                   <div class="form-group">
@@ -8,7 +9,7 @@
                       <button type="submit" class="button outline-btn newsletter">Submit</button>
                   </div>
               </form>
-          </div>
+          </div>-->
       </div>
   </div>
     <div class="container">
