--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ h5,
 h6 {
     color: #254356;
     font-family: Geomanist Book;
+    clear: both;
 }
 
 h1 {
@@ -406,6 +407,10 @@ a.button.outline-btn {
 
 .darkblue-btn {
   background-color: #0C5176;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 .outline-btn:hover,
