--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -49,11 +49,11 @@
         <div class="row">
             <div class="hero-text">
                 <div class="hero-text-centered">
-                    <h1>Docker's Documentation</h1>
+                    <h1>Docker Documentation</h1>
                     <p>Docker provides a way to run applications securely isolated in a container, packaged with all its dependencies and libraries.</p>
                     <ul class="buttons">
-                        <li><a class="button transparent-btn" href="https://support.docker.com" target="_blank">Looking for Support</a></li>
-                        <li> <a class="button secondary-btn" href="https://training.docker.com" target="_blank">Get Training</a></li>
+                        <li><a class="button transparent-btn" href="/engine/installation/" target="_blank">Get Docker</a></li>
+                        <li> <a class="button secondary-btn" href="/learn/" target="_blank">Get Started</a></li>
                     </ul>
                 </div>
             </div>
