Use the jekyll-include-cache plugin to shave off some page building time

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -89,7 +89,7 @@
                 </ul>
             </div>
             <div class="ctrl-right">
-              {% include archive-list.html %}
+              {% include_cached archive-list.html %}
             </div>
         </div>
     </nav>
