--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
             </div>
             <div class="ctrl-right">
                 <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-indent" aria-hidden="true"></i></a>
-                {% include archive-list.html %}
+                {% include_cached archive-list.html %}
             </div>
         </div>
     </div>
