--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -181,7 +181,7 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 	</div>
 
 	<footer class="footer">
-		{% include footer.html %}
+		{% include_cached footer.html %}
 	</footer>
 	<link rel="stylesheet" href="/css/github.css">
 	<script src="/js/highlight.pack.js"></script>
