Revert "Use the jekyll-include-cache plugin to shave off some page building time (#2290)"
This reverts commit a02d80530b6d48a995233477de001c9505dd6ee0.

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -89,7 +89,7 @@
                 </ul>
             </div>
             <div class="ctrl-right">
-              {% include_cached archive-list.html %}
+              {% include archive-list.html %}
             </div>
         </div>
     </nav>
