--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -391,6 +391,8 @@ background-image: linear-gradient(to bottom, #75ae4c, #99c47c);
   <script src="/js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <script src="/js/alljs.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/archive.js"></script>
   <script async="" src="/js/menu.js"></script>
   <script async="" src="/js/app.js"></script>
   <script async="" src="/js/anchorlinks.js"></script>
