--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -199,7 +199,6 @@ ng\:form {
 					<ul id="top-nav" class="tabs col-xs-12 col-sm-10 col-md-10">
 						{% include treebuilder.html %}
 					</ul>
-					<div id="start-tour-container" class="hidden-xs col-sm-2 col-md-2"><div id="start-tour">Tour our new<br />navigation!</div></div>
 			</div>
       <div class="" ng-non-bindable>
         <div class="container-fluid">
@@ -412,11 +411,11 @@ background-image: linear-gradient(to bottom, #75ae4c, #99c47c);
   <script src="/js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <script src="/js/alljs.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/archive.js"></script>
   <script async="" src="/js/menu.js"></script>
   <script async="" src="/js/app.js"></script>
   <script async="" src="/js/anchorlinks.js"></script>
-	<script src="/js/hopscotch.js"></script>
-	<script src="/js/my_first_tour.js"></script>
 </div>
 <div id="mktoStyleLoaded" style="display: none; border-top-color: rgb(18, 52, 86);"></div>
 <form class="ng-pristine ng-valid mktoForm mktoHasWidth mktoLayoutLeft" novalidate style="font-family: Helvetica, Arial, sans-serif; font-size: 13px; color: rgb(51, 51, 51); visibility: hidden; position: absolute; top: -500px; left: -1000px; width: 1602px;">
