--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -1,56 +1,60 @@
 <div class="header">
     <div class="fan"></div>
-    <div class="container">
-      <div class="row">
-          <nav class="nav-primary">
-              <div class="container">
-                  <div class="navbar-header">
-                    <img class="logo" src="../images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs">
-                  </div>
-                  <div class="navbar-collapse collapse">
-                      <ul class="primary nav navbar-nav">
-                          <li><a href="https://docker.com/what-docker">What is Docker?</a></li>
-                          <li><a href="https://docker.com/get-docker">Product</a></li>
-                          <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Get Docker <span class="caret"></span></a>
-                              <ul class="dropdown-menu nav-main">
-                                  <h6 class="dropdown-header">For Desktops</h6>
-                                  <li><a href="https://docker.com/docker-mac">Mac</a></li>
-                                  <li><a href="https://docker.com/docker-windows">Windows</a></li>
-                                  <h6 class="dropdown-header">For Cloud Providers</h6>
-                                  <li><a href="https://docker.com/docker-aws">AWS</a></li>
-                                  <li><a href="https://docker.com/docker-microsoft-azure">Azure</a></li>
-                                  <h6 class="dropdown-header">For Servers</h6>
-                                  <li><a href="https://docker.com/docker-windows-server">Windows Server</a></li>
-                                  <li><a href="https://docker.com/docker-centos">CentOS</a></li>
-                                  <li><a href="https://docker.com/docker-debian">Debian</a></li>
-                                  <li><a href="https://docker.com/docker-fedora">Fedora</a></li>
-                                  <li><a href="https://docker.com/docker-oracle-linux">Oracle Enterprise Linux</a></li>
-                                  <li><a href="https://docker.com/docker-rhel">RHEL</a></li>
-                                  <li><a href="https://docker.com/docker-sles">SLES</a></li>
-                                  <li><a href="https://docker.com/docker-ubuntu">Ubuntu</a></li>
-                              </ul>
-                          </li>
-                          <li><a href="https://docs.docker.com">Docs</a></li>
-                          <li><a href="https://docker.com/docker-community">Community</a></li>
-                      </ul>
-                      <ul class="nav navbar-nav navbar-right user-nav">
-                          <li><a href="https://cloud.docker.com/">Create Docker ID</a></li>
-                          <li><a href="https://cloud.docker.com/login">Sign In</a></li>
-                      </ul>
-                  </div>
-                  <!--/.nav-collapse -->
-              </div>
-          </nav>
-      </div>
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="nav-primary">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <img class="logo" src="../images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs">
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="primary nav navbar-nav">
+                            <li><a href="https://docker.com/what-docker">What is Docker?</a></li>
+                            <li><a href="https://docker.com/get-docker">Product</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Get Docker <span class="caret"></span></a>
+                                <ul class="dropdown-menu nav-main">
+                                    <h6 class="dropdown-header">For Desktops</h6>
+                                    <li><a href="https://docker.com/docker-mac">Mac</a></li>
+                                    <li><a href="https://docker.com/docker-windows">Windows</a></li>
+                                    <h6 class="dropdown-header">For Cloud Providers</h6>
+                                    <li><a href="https://docker.com/docker-aws">AWS</a></li>
+                                    <li><a href="https://docker.com/docker-microsoft-azure">Azure</a></li>
+                                    <h6 class="dropdown-header">For Servers</h6>
+                                    <li><a href="https://docker.com/docker-windows-server">Windows Server</a></li>
+                                    <li><a href="https://docker.com/docker-centos">CentOS</a></li>
+                                    <li><a href="https://docker.com/docker-debian">Debian</a></li>
+                                    <li><a href="https://docker.com/docker-fedora">Fedora</a></li>
+                                    <li><a href="https://docker.com/docker-oracle-linux">Oracle Enterprise Linux</a></li>
+                                    <li><a href="https://docker.com/docker-rhel">RHEL</a></li>
+                                    <li><a href="https://docker.com/docker-sles">SLES</a></li>
+                                    <li><a href="https://docker.com/docker-ubuntu">Ubuntu</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="https://docs.docker.com">Docs</a></li>
+                            <li><a href="https://docker.com/docker-community">Community</a></li>
+                            <li><a href="https://cloud.docker.com/">Create Docker ID</a></li>
+                            <li><a href="https://cloud.docker.com/login">Sign In</a></li>
+                        </ul>
+<!--                             <div class="user-nav hidden-sm">
+                                <ul>
+                                    <li><a href="https://cloud.docker.com/">Create Docker ID</a></li>
+                                    <li><a href="https://cloud.docker.com/login">Sign In</a></li>
+                                </ul>                       
+                            </div> -->
+                        </div>
+                    <!--/.nav-collapse -->
+                </div>
+            </nav>
+        </div>
     </div>
     <!-- hero banner text -->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="hero-text">
                 <div class="hero-text-centered">
                     <h1>Docker Documentation</h1>
-                    <p>Docker provides a way to run applications securely isolated in a container, packaged with all its dependencies and libraries.</p>
+                    <p>Docker provides a way to run applications securely isolated in a container-fluid, packaged with all its dependencies and libraries.</p>
                     <ul class="buttons">
                         <li><a class="button transparent-btn" href="/engine/installation/" target="_blank">Get Docker</a></li>
                         <li> <a class="button secondary-btn" href="/learn/" target="_blank">Get Started</a></li>
@@ -58,48 +62,58 @@
                 </div>
             </div>
         </div>
+        <a href="http://2017.dockercon.com/" target="_blank">
+        <div class="banner">
+            <img src="images/dockercon.png">
+        </div>
+        </a>
     </div>
     <!-- nav-secondary -->
     <nav class="nav-secondary-tabs" data-spy="affix" data-offset-top="490">
-        <div class="container-fluid">
-          <!-- <div class="affix-logo">
-            <img class="logo" src="../images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs">
-          </div> -->
-            <div class="search-form">
-                <form class="search-form form-inline ng-pristine ng-valid" id="searchForm" action="/search/">
-                  <input class="search-field form-control ds-input" id="st-search-input" value="" name="q" placeholder="Search the docs" type="search" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;">
-                  <div id="autocompleteContainer">
-                    <div id="autocompleteResults"></div>
+        <div class="container-fluid-fluid">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+                  <div class="search-form">
+                    <form class="search form-inline ng-pristine ng-valid" id="searchForm" action="/search/">
+                        <input class="search-field form-control ds-input" id="st-search-input" value="" name="q" placeholder="Search the docs" type="search" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;">
+                        <div id="autocompletecontainer-fluid">
+                            <div id="autocompleteResults"></div>
+                        </div>
+                        <!-- <button type="submit" class="search-submit btn btn-default">Search</button> -->
+                    </form>
                   </div>
-                  <!-- <button type="submit" class="search-submit btn btn-default">Search</button> -->
-                </form>
-            </div>
-            <div class="sidebar-toggle">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div id="tabs">
-                <!-- <ul class="tabs nav navbar-nav navbar-collapse collapse navbar-left"> -->
-                <ul class="tabs nav navbar-nav navbar-collapse navbar-left">
-                  {% include treebuilder.html %}
-                </ul>
-            </div>
-            <div class="ctrl-right">
-              <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Docker 17.03 (current) <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu">
-                    {% for item in site.data.docsarchive.docker-compose %}
-                    <li><a href="/{{ item[0] }}/">Docker {{ item[0] }}</a></li>
-                    {% endfor %}
-                  </ul>
-              </div>
+                  <div class="sidebar-toggle">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-6 col-lg-7>
+                    <div id="tabs">
+                        <!-- <ul class="tabs nav navbar-nav navbar-collapse collapse navbar-left"> -->
+                        <ul class="tabs">
+                            {% include treebuilder.html %}
+                        </ul>
+                    </div>
+                <div class="col-xs-12 col-sm-1 col-md-3 col-lg-3">
+                    <div class="ctrl-right hidden-xs">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Docker 17.03 (current) <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                {% for item in site.data.docsarchive.docker-compose %}
+                                <li><a href="/{{ item[0] }}/">Docker {{ item[0] }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </nav>
-  </div>
+</div>
