--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="nav-secondary navbar navbar-fixed-top">
     <div class="fan"></div>
     <div class="container-fluid">
-        <!-- <div class="ctrl-left">
+<!--         <div class="ctrl-left">
         <a href="javascript:void(0)" id="menu-toggle-left"><i class="fa fa-outdent" aria-hidden="true"></i></a>
       </div> -->
         <div class="navbar-header">
@@ -18,20 +18,21 @@
                         <!-- <button type="submit" class="search-submit btn btn-default">Search</button> -->
                     </form>
             </div>
-            <div class="sidebar-toggle">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
+                <div class="sidebar-toggle">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+            <div>
             <div id="tabs">
-                <ul class="tabs nav navbar-nav">
+                <ul class="tabs">
                     {% include treebuilder.html %}
                 </ul>
             </div>
-            <div class="ctrl-right">
+            <div class="ctrl-right hidden-xs hidden-sm">
                 <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-indent" aria-hidden="true"></i></a>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
