--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -14,10 +14,7 @@
     order: -1;
 }
 
-.col-content {
-    // padding: 60px 69px 50px 20px;
-}
-
+// .col-content {}
 
 .col-body {
     flex-direction: row;
@@ -34,7 +31,6 @@
 
 .col-toc-hidden {
     display: none;
-    // transition: all 0.5s ease;
 }
 
 
