Add page generation date, remove empty newsletter div

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,20 @@
-
+  {% comment %}
   <div class="newsletter_section">
-      <div class="container">
-        <!-- newsletter
-          <div class="col-md-8">
-              <form class="form-inline">
-                  <div class="form-group">
-                      <input type="email" class="form-control input" placeholder="email address">
-                      <button type="submit" class="button outline-btn newsletter">Submit</button>
-                  </div>
-              </form>
-          </div>-->
-      </div>
+
+    <div class="container">
+      <!-- newsletter
+        <div class="col-md-8">
+            <form class="form-inline">
+                <div class="form-group">
+                    <input type="email" class="form-control input" placeholder="email address">
+                    <button type="submit" class="button outline-btn newsletter">Submit</button>
+                </div>
+            </form>
+        </div>-->
+    </div>
+
   </div>
+  {% endcomment %}
     <div class="container">
         <div class="top_footer">
             <div class="row">
@@ -91,9 +94,9 @@
             </div>
         </div>
         <div class="bottom_footer">
-            <div class="footer-copyright">
+            <div class="footer-copyright col-xs-12 col-md-8">
                 <p class="copyright">
-                    Copyright © 2017 Docker Inc. All rights reserved. </p>
+                    Copyright &copy; 2017 Docker Inc. All rights reserved. </p>
             </div>
             <div class="footer_social_nav">
                 <ul class="nav-social">
