split out global header

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -41,6 +41,23 @@
     }
 }
 
+.content {
+    padding: 60px 50px;
+}
+
+.main-content {
+    padding: 0 35px 25px 30px;
+}
+
+section.section {
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+.content ul {
+    margin-top: 10px;
+}
+
 /*
 *
 * sidebar ***********************************************************************
