--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -1,86 +1,34 @@
 /*
 *
-* hero banner text *************************************************************
-*
-*/
-
-.hero-text {
-    -ms-flex-align: center;
-    align-items: center;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    min-height: 20em;
-    min-width: 400px;
-    -ms-flex-pack: center;
-    justify-content: center;
-    & h1 {
-        color: $white;
-    }
-    & ul {
-        padding: 0;
-        // .button {
-        //     margin: 10px 5px 10px 0;
-        //     font-family: Geomanist Book;
-        //     padding: 12px 35px 10px;
-        // }
-        li {
-            padding: 0 10px 0 0;
-        }
-    }
-    p {
-        color: $white;
-        margin-bottom: 15px;
-        font-size: 18px;
-        font-family: "Open Sans", sans-serif;
-    }
-}
-
-.hero-text-centered {
-    -ms-flex: none;
-    flex: none;
-    text-align: center;
-    max-width: 70%;
-}
-
-
-/** dockercon banner **/
-
-.banner {
-    width: 270px;
-    height: auto;
-    position: absolute;
-    bottom: 55px;
-    right: 0;
-    z-index: 1;
-    img {
-        width: 100%;
-    }
-}
-
-
-/*
-*
 * Custom Content Docs  ******************************************
 *
 */
 
-.content {
-    padding: 60px 50px;
+/** code formatting **/
+
+pre {
+    background-color: #F5F8FA!important;
+    display: block;
+    padding: 20.5px!important;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: normal !important;
+    word-wrap: break-word;
+    border: 0!important;
+    border-radius: 4px;
+    overflow-x: scroll !important;
 }
 
-.main-content {
-    padding: 0 35px 25px 30px;
-}
-
-section.section {
-    max-width: 980px;
-    margin: 0 auto;
-}
-
-.content ul {
-    margin-top: 10px;
+code {
+    background-color: #F5F8FA!important;
+    border-radius: 2px;
+    color: #0c5176 !important;
+    font-size: 90%;
+    padding: 3px 7px;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 
