--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 @import "base";
 @import "typography";
 @import "layout";
+@import "global-header";
 @import "navigation";
 @import "buttons";
 @import "content";
