--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -12,7 +12,8 @@
     .banner,
     .ctrl-right,
     ul.primary.nav.navbar-nav,
-    .search-form {
+    // .nav-secondary .search-form,
+    .nav-secondary .logo {
         display: none;
     }
     .header,
