--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -6,7 +6,7 @@
 
 @media only screen 
     and (min-width : 376px)
-    and (max-width : 1180px) {  
+    and (max-width : 1024px) {  
     .nav-primary,
     .hero-text,
     .banner,
@@ -45,6 +45,48 @@
     }
   }
 
+
+@media only screen 
+    and (min-width : 376px)
+    and (max-width : 775px) {  
+    .nav-primary,
+    .hero-text,
+    .banner,
+    .ctrl-right,
+    ul.primary.nav.navbar-nav,
+    // .nav-secondary .search-form,
+    .nav-secondary .logo {
+        display: none;
+    }
+    .header,
+    .nav-secondary-tabs,
+    .nav-secondary {
+        height: 100px;
+    }
+    .tabs {
+        padding: 0 0 0 29px;
+    }
+    .tabs li a {
+        font-size: 13px;
+        padding: 19px 10px 11px;
+    }
+    .sidebar-home,
+    .sidebar-home.affix,
+    .sidebar,
+    .sidebar.affix {
+        position: absolute;
+        width: 100%;
+        height: 500px;
+        overflow: scroll;
+
+    }
+    .content {
+        padding: 108px 50px;
+    }
+    .search-form {
+        width: 81%;
+    }
+  }
 
 /*
 *
@@ -238,7 +280,7 @@
 
 @media only screen 
   and (min-device-width: 768px) 
-  and (max-device-width: 1024px) {
+  and (max-device-width: 1110px) {
     .logo {
         margin: 12px 10px 0 10px;
         width: 130px;
