john rules, please update man

--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -95,6 +95,9 @@
     .content {
         padding: 108px 50px;
     }
+    .main-content {
+        padding: 22px 35px 25px 30px;
+    }
     .search-form {
         width: 81%;
     }
