trying to make netlify work

--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -55,6 +55,9 @@
     // .block {
     //     text-align: center;
     // }
+    .nav-secondary-tabs .search-form input[type=search] {
+        min-width: auto;
+    }
   }
 
 
