--- a/css/style.scss
+++ b/css/style.scss
@@ -2,16 +2,16 @@
 # Docker Documentation Theme
 ---
 
-// @import "variables";
-// @import "night-mode";
-// @import "base";
-// @import "typography";
-// @import "layout";
-// @import "global-header";
-// @import "navigation";
-// @import "buttons";
-// @import "content";
-// @import "utilities";
-// @import "github";
-// @import "overrides";
-// @import "mobile";
+@import "variables";
+@import "night-mode";
+@import "base";
+@import "typography";
+@import "layout";
+@import "global-header";
+@import "navigation";
+@import "buttons";
+@import "content";
+@import "utilities";
+@import "github";
+@import "overrides";
+@import "mobile";
