adding dockercon svg

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -64,7 +64,7 @@
         </div>
         <a href="http://2017.dockercon.com/" target="_blank">
         <div class="banner">
-            <img src="images/dockercon.png">
+            <img src="images/dockercon.svg">
         </div>
         </a>
     </div>
