--- a/_scss/_utilities.scss
+++ b/_scss/_utilities.scss
@@ -97,7 +97,7 @@ i.fa.fa-outdent {
 }
 
 .nav-secondary-tabs .search-form {
-    width: 240px;
+    // width: 240px;
     margin: 10px 0 0 10px!important;
 }
 
