--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -31,6 +31,11 @@ code {
     white-space: nowrap;
 }
 
+pre code {
+    overflow-x: auto;
+    overflow-wrap: normal;
+    white-space: pre;
+}
 
 /*
 *
