s/container-fluid/container

--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -54,7 +54,7 @@
             <div class="hero-text">
                 <div class="hero-text-centered">
                     <h1>Docker Documentation</h1>
-                    <p>Docker provides a way to run applications securely isolated in a container-fluid, packaged with all its dependencies and libraries.</p>
+                    <p>Docker provides a way to run applications securely isolated in a container, packaged with all its dependencies and libraries.</p>
                     <ul class="buttons">
                         <li><a class="button transparent-btn" href="/engine/installation/" target="_blank">Get Docker</a></li>
                         <li> <a class="button secondary-btn" href="/learn/" target="_blank">Get Started</a></li>
